[package]
name = "diff-format"
version = "0.1.0"
authors = ["Michael Shustin <michael.shustin@vastdata.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.11.1"
git2 = "0.18.1"
log = "0.4.20"
regex = "1.10.3"
